Fixed height on era-icons was needed cause they're aabsolute. fixed some other layout bugs.

--- a/public/stylesheets/sparkles.less
+++ b/public/stylesheets/sparkles.less
@@ -1,5 +1,10 @@
 .flipped {
-  
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
 }
 .rotated-90 {
   -webkit-transform: rotate(90deg);
